[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/palladium/core/environment/music_area.gd" type="Script" id=1]

[node name="music_area" type="Area" groups=[
"music_areas",
]]
pause_mode = 2
input_ray_pickable = false
monitorable = false
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="FadeOutTween" type="Tween" parent="."]

[node name="FadeInTween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_music_area_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_music_area_body_exited"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
[connection signal="tween_completed" from="FadeOutTween" to="." method="_on_FadeOutTween_tween_completed"]
[connection signal="tween_completed" from="FadeInTween" to="." method="_on_FadeInTween_tween_completed"]
